changed html header to utf-8.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
+	<meta charset="utf-8"/>
 <title>deutschlandhasst.de</title>
 <script src="http://maps.googleapis.com/maps/api/js"></script>
 <script>
