--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        margin-top: 20px;
       }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+
       #map {
         height: 100%;
       }
@@ -32,7 +65,7 @@
         left: 50%;
         padding: 5px;
         position: absolute;
-        top: 10px;
+        top: 50px;
         z-index: 5;
       }
     </style>
@@ -40,8 +73,14 @@
 
   <body>  
       
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
       <iframe id="frmFile" src="visualization/txt/fluecht_coordsBACKUP_ALL_WITHOUT_GER.txt" onload="LoadFile();" style="display: none;"></iframe>
-      <iframe src="visualization/txt/wacken_coordsBACKUP_ALL.txt" width="400" height="160" scrolling="yes" align="left"></iframe>
       
     <div id="floating-panel">
       <button onclick="toggleHeatmap()">Toggle Heatmap</button>
