--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ li a:hover:not(.active) {
   top: 10px;
   left: 25%;
   z-index: 5;
-  background-color: #fff;
+  background-color: #333;
   padding: 5px;
   border: 1px solid #999;
   text-align: center;
@@ -60,7 +60,7 @@ li a:hover:not(.active) {
 }
 
       #floating-panel {
-        background-color: #fff;
+        background-color: #333;
         border: 1px solid #999;
         left: 89%;
         right: 0.5%;
@@ -68,6 +68,11 @@ li a:hover:not(.active) {
         position: absolute;
         top: 90px;
         z-index: 5;
+      }
+
+      button {
+        background-color: #111;
+        color: white;
       }
     </style>
   </head>
