changed opacity of textAreas

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ li.dropdown{
       }
 
 #textArea {
+  opacity: 0.9;
   display: none;
   background-color: #333;
         border: 1px solid #999;
@@ -115,6 +116,7 @@ li.dropdown{
 }
 
 #textArea2 {
+  opacity: 0.9;
   display: none;
   background-color: #333;
         border: 1px solid #999;
