--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
-        margin-top: 20px;
+        margin-top: 0;
       }
 
 ul {
@@ -17,10 +17,6 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 6
 }
 
 li {
@@ -28,7 +24,7 @@ li {
 }
 
 li a, .dropbtn {
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -36,11 +32,11 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #111;
+    background-color: red;
 }
 
-li.dropdown{
-  display: inline-block;
+li.dropdown {
+    display: inline-block;
 }
 
 .dropdown-content {
@@ -52,12 +48,11 @@ li.dropdown{
 }
 
 .dropdown-content a {
-  color: black;
+    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1}
@@ -66,8 +61,9 @@ li.dropdown{
     display: block;
 }
 
-.active {
-    background-color: #4CAF50;
+#dropdown-bar {
+  z-index: 100;
+  position: relative;
 }
 
       #map {
@@ -131,18 +127,21 @@ li.dropdown{
   </head>
 
   <body>  
-      
+ 
+<div id="dropdown-bar">     
 <ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
   <li class="dropdown">
-    <a href="#" class="dropbtn" onclick="LoadFile();">Flüchtlinge</a>
+    <a href="#" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
       <a href="#">Link 1</a>
-      </div>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
   </li>
-  <li><a href="#" onclick="toggleTextArea();">Flüchtlinge Wort-Unigramme</a></li>
-  <li><a href="#" onclick="toggleTextArea2();">Flüchtlinge Wort-Bigramme</a></li>
-  <li><a href="#" onclick="LoadFile2();">Wacken</a></li>
 </ul>
+</div>
 
       <iframe id="frmFile" src="visualization/txt/fluecht_coordsBACKUP_ALL_WITHOUT_GER.txt" onload="LoadFile();" style="display: none;"></iframe>
       <iframe id="frmFile2" src="visualization/txt/wacken_coordsBACKUP_ALL.txt" style="display: none;"></iframe>
