--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ li.dropdown {
 }
 
       #map {
-        height: 100%;
+        height: 92%;
+        z-index: 2;
       }
 #floating-panel {
   position: absolute;
