shows now most common words.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div id="dropdown-bar">     
     <ul>
       <li class="dropdown">
-          <a href="#" class="dropbtn" onclick="LoadFile();" >Flüchtlinge</a>
+          <a href="#" class="dropbtn" onclick="LoadFile();">Flüchtlinge</a>
           <div class="dropdown-content">
-            <a href="#" onclick="toggleWordFD();">Wort Unigramme</a>
+            <a href="#" onclick="toggleWordFD();">Worthäufigkeiten</a>
           </div>
         </li>
       <li><a href="#" onclick="LoadFile2();">Wacken</a></li>
@@ -31,11 +31,7 @@
   <div id="map"></div>
 
   <div id="wordFD">
-    <p>
-    TEST<br>
-    TEST<br>
-    TEST<br>
-    </p>
+    <object width="300" height="300" type="text/text" data="twitter/data/fluechtlingeFD.txt" border="0" style="font color:white;" ></object>
   </div>
  
   <script>
