--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
   <link rel="stylesheet" type="text/css" href="visualization/style/map.css">
 </head>
 
-<body>  
+<body>
+  <header>
+    <h1>deutschlandhasst</h1>
+    <nav>
+      <ul>
+        <li><a href="#" onclick="LoadFluechtlinge();">Flüchtlinge</a>
+          <ul>
+            <li><a href="#" onclick="toggleWordFD();">Worthäufigkeiten</a></li>
+          </ul>
+        </li>
+        <li><a href="#" onclick="LoadWacken();">Wacken</a></li>
+      </ul>
+    </nav>
+  </header>
  
-  <div id="dropdown-bar">     
+  <!-- <div id="dropdown-bar">     
     <ul>
       <li class="dropdown">
           <a href="#" class="dropbtn" onclick="LoadFile();">Flüchtlinge</a>
@@ -20,7 +33,7 @@
       <li><a href="#" onclick="LoadFile2();">Wacken</a></li>
     </ul>
   </div>
-
+ -->
   <iframe id="frmFile" src="visualization/txt/fluecht_coordsBACKUP_ALL_WITHOUT_GER.txt" onload="LoadFile();" style="display: none;"></iframe>
   <iframe id="frmFile2" src="visualization/txt/wacken_coordsBACKUP_ALL_WITHOUT_GER.txt" style="display: none;"></iframe>
       
@@ -49,7 +62,7 @@
     var latLonArray;
     var arrLength;
 
-    function LoadFile() {
+    function LoadFluechtlinge() {
       var oFrame = document.getElementById("frmFile");
       var strRawContents = oFrame.contentWindow.document.body.childNodes[0].innerHTML;
       while (strRawContents.indexOf("\r") >= 0)
@@ -77,7 +90,7 @@
       initLayer();
     }
 
-    function LoadFile2() {
+    function LoadWacken() {
       var oFrame = document.getElementById("frmFile2");
       var strRawContents = oFrame.contentWindow.document.body.childNodes[0].innerHTML;
       while (strRawContents.indexOf("\r") >= 0)
