--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
 
   <div class="menu">
   <ul>
-    <a href="#"><li>LINK ONE</li></a>
-    <a href="#"><li>LINK TWO</li></a>
-    <a href="#"><li>LINK THREE</li></a>
-    <a href="#"><li>LINK FOUR</li></a>
-    <a href="#"><li>LINK FIVE</li></a>
+    <a href="#"><li>Flüchtlinge</li></a>
+    <a href="#"><li>Homophobie</li></a>
+    <a href="#"><li>Behinderung</li></a>
+    <a href="#"><li>Twitteraktivität</li></a>
   </ul>
 </div> 
 
@@ -80,8 +79,6 @@
   </nav> -->
 
   <div class="flex-container">
-
-    <div id="beschreibung"><h2>Hier könnte Text stehen!</h2></div>
 
     <div id="map">
       <div id="floating-panel">
